# pygbnf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  arithmetic_nfa.dot  pyproject.toml
.github/workflows/: ci.yml
examples/: arithmetic.py  csv_grammar.py  demo_adaptive.py  demo_chain.py  demo_chain_template.py  demo_enum_select.py  demo_hybrid.py  demo_llm.py  demo_matcher.py  demo_multistep.py  demo_react.py  demo_schema.py  demo_simple_lang.py  demo_template.py  demo_vision.py  demo_visualization.py  demo_weighted_select.py  json_grammar.py  quickstart.py  simple_lang.py  token_demo.py
pygbnf/: __init__.py  _llm_utils.py  _llm_weights.py  _schema_compiler.py  _schema_functions.py  _schema_type_utils.py  _visualization_builder.py  _visualization_model.py  _visualization_utils.py  chain.py  combinators.py  gbnf_codegen.py  grammar.py  helpers.py  llm.py  matcher.py  nodes.py  optimizations.py  py.typed  schema.py  tokens.py  toolkit.py  visualization.py
tests/: test_core.py  test_full.py  test_llm.py  test_matcher.py  test_pygbnf.py  test_schema.py  test_visualization.py
