[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygbnf"
dynamic = ["version"]
description = "A composable Python DSL for building GBNF grammars compatible with llama.cpp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "al" }]
keywords = ["gbnf", "grammar", "llama-cpp", "llm", "constrained-generation", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/al/pygbnf"
Repository = "https://github.com/al/pygbnf"
Issues = "https://github.com/al/pygbnf/issues"

[tool.hatch.version]
path = "pygbnf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pygbnf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
